--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav a:hover {
   padding: 6rem 2rem;
   color: #fff;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-              url('/sources/03\ Produktion.jpg') no-repeat center center;
+              url('https://nkuthalomakonco.github.io/TechNkuthaloMakonco/sources/03\ Produktion.jpg') no-repeat center center;
   background-size: cover;
   border-bottom: 4px solid #00b4d8;
   position: relative;
